cambios en el cuerpo

--- a/index.html
+++ b/index.html
@@ -7,8 +7,32 @@
     <link rel="stylesheet" href="https://css.hackclub.com/theme.css">
 </head>
 <body>
-    <button>
-        boton
-    </button>
+    <header>
+        <h1 class="ultratitle">VCPCode</h1>
+        <img src="" alt="logo club">
+    </header>
+
+    <main>
+        <label class="headline">
+            <h2>Primer HackClub de Argentina</h2>
+        </label>
+        
+        <div class="card">
+            <textarea>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero blanditiis quaerat saepe fuga ut corrupti exercitationem earum ipsa, et quidem, consequatur consectetur rerum corporis tempora, voluptatum quia odit nam necessitatibus.
+            </textarea>
+            <img src="" alt="foto club">
+        </div>
+        
+        <div>
+            <button>
+                Quiero ser parte
+            </button>
+        </div>
+    </main>
+
+    <footer>
+
+    </footer>
 </body>
 </html>
