seguimos con la base de la web

--- a/index.html
+++ b/index.html
@@ -15,17 +15,33 @@
 
     <main>
         <div class="subtitleprincipal">
-            <img src="fotos/flag-orpheus-top.svg" alt="imagen" class="imagenLogoHachClub">
+            <img src="fotos/flag-orpheus-top.svg" alt="imagen" class="imagenLogoHackClub">
             <h2 class="headline">Primer HackClub de Argentina</h2>
         </div>
         
         <div class="card">
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum molestias itaque rem? Nisi saepe illo, quidem, iste omnis neque quos ullam laboriosam doloremque velit totam repudiandae optio sed ipsam numquam.
+            <p style="font-size: larger;">
+                VCPCode es el primer HackClub en Argentina, es un espacio donde jovenes nos unimos para aprender, crear y colaborar. Ubicado en Villa Carlos Paz, somos parte de la red mundial de HackClub, fomentando la creatividad y el desarrollo de proyectos.
             </p>
-            <img src="" alt="foto club">
+            <img src="fotos/jovenesalrededordeunaPC.jpeg" alt="foto club" style="width: 20%; border-radius: 5%;">
         </div>
-        
+
+
+        <div class="card">
+            <div class="card">
+                <div class="row">
+                    <img src="fotos/fotopresencial.png" alt="">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi reiciendis praesentium voluptate, enim non et rerum corrupti officia atque, ducimus officiis quaerat provident accusamus exercitationem quod, velit a quam? Optio!</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="row">
+                    <img src="fotos/jovenesporzoom.jpeg" alt="">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi reiciendis praesentium voluptate, enim non et rerum corrupti officia atque, ducimus officiis quaerat provident accusamus exercitationem quod, velit a quam? Optio!</p>
+                </div>
+            </div>
+        </div>
+
         <div class="boton">
             <a href="https://chat.whatsapp.com/Iq1Qsf91gdP04I6wUEoSJF">
                 <button>
