agregado pie de pagina, falta retocar aspectos esteticos y agregar descripciones

--- a/index.html
+++ b/index.html
@@ -49,10 +49,35 @@
                 </button>
             </a>
         </div>
+
+        <div>
+            <h2>
+                Nuestras Actividades
+            </h2>
+            <div class="card">
+                <img src="" alt="fotoramdom">
+                <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Commodi alias quibusdam vel officia qui, blanditiis laudantium, rerum architecto debitis eligendi optio tenetur neque, illo maxime esse unde doloremque fugiat quas!
+                </p>                 
+            </div>
+            <div class="card">
+                <img src="" alt="fotoramdom">
+                <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Commodi alias quibusdam vel officia qui, blanditiis laudantium, rerum architecto debitis eligendi optio tenetur neque, illo maxime esse unde doloremque fugiat quas!
+                </p>                 
+            </div>
+            <div class="card">
+                <img src="" alt="fotoramdom">
+                <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Commodi alias quibusdam vel officia qui, blanditiis laudantium, rerum architecto debitis eligendi optio tenetur neque, illo maxime esse unde doloremque fugiat quas!
+                </p>                 
+            </div>
+        </div>
+
     </main>
 
     <footer>
-        
+        <p> No dudes en unirte a VCPCode, todos podemos aprender juntos</p>
     </footer>
 </body>
 </html>
