base de web lista

--- a/index.html
+++ b/index.html
@@ -3,81 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="https://css.hackclub.com/theme.css">
+    <title>TimeLine</title>
     <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-    <header>
-        <h1 class="ultratitle">VCPCode</h1>
-    </header>
+    <div class="card flex-container"> 
+        <div class="text-container"> 
+            <h1 class="titleHeader">VCPCode</h1> 
+            <p class="titleHeader">El primer HackClub de Córdoba.</p> 
+        </div> 
+        <img src="fotos/Logo.png" alt="Logo" class="Logo">
+    </div>
 
-    <main>
-        <div class="subtitleprincipal">
-            <img src="fotos/flag-orpheus-top.svg" alt="imagen" class="imagenLogoHackClub">
-            <h2 class="headline">Primer HackClub de Argentina</h2>
-        </div>
-        
-        <div class="card">
-            <p style="font-size: larger;">
-                VCPCode es el primer HackClub en Argentina, es un espacio donde jovenes nos unimos para aprender, crear y colaborar. Ubicado en Villa Carlos Paz, somos parte de la red mundial de HackClub, fomentando la creatividad y el desarrollo de proyectos.
-            </p>
-            <img src="fotos/jovenesalrededordeunaPC.jpeg" alt="foto club" style="width: 20%; border-radius: 5%;">
-        </div>
-
-
-        <div class="card">
-            <div class="card">
-                <div class="row">
-                    <img src="fotos/fotopresencial.png" alt="">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi reiciendis praesentium voluptate, enim non et rerum corrupti officia atque, ducimus officiis quaerat provident accusamus exercitationem quod, velit a quam? Optio!</p>
-                </div>
+    <div class="card">
+        <h2>Modalidades</h2>
+        <div class="flex-container">
+            <div class="subdivition">
+                <p>Virtual</p>
             </div>
-            <div class="card">
-                <div class="row">
-                    <img src="fotos/jovenesporzoom.jpeg" alt="">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi reiciendis praesentium voluptate, enim non et rerum corrupti officia atque, ducimus officiis quaerat provident accusamus exercitationem quod, velit a quam? Optio!</p>
-                </div>
+            <div class="subdivition">
+                <p>Precenciales</p>
+            </div>
+            <div class="subdivition">
+                <p>Eventos</p>
             </div>
         </div>
+    </div>
 
-        <div class="boton">
-            <a href="https://chat.whatsapp.com/Iq1Qsf91gdP04I6wUEoSJF">
-                <button>
-                    Quiero ser parte
-                </button>
-            </a>
-        </div>
-
-        <div>
-            <h2>
-                Nuestras Actividades
-            </h2>
-            <div class="card">
-                <img src="" alt="fotoramdom">
-                <p>
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Commodi alias quibusdam vel officia qui, blanditiis laudantium, rerum architecto debitis eligendi optio tenetur neque, illo maxime esse unde doloremque fugiat quas!
-                </p>                 
+    <div class="card">
+        <h2>Eventos</h2>
+        <div class="flex-container">
+            <div class="subdivition">
+                <p>HackPicnic</p>
             </div>
-            <div class="card">
-                <img src="" alt="fotoramdom">
-                <p>
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Commodi alias quibusdam vel officia qui, blanditiis laudantium, rerum architecto debitis eligendi optio tenetur neque, illo maxime esse unde doloremque fugiat quas!
-                </p>                 
+            <div class="subdivition">
+                <p>Web del Club</p>
             </div>
-            <div class="card">
-                <img src="" alt="fotoramdom">
-                <p>
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Commodi alias quibusdam vel officia qui, blanditiis laudantium, rerum architecto debitis eligendi optio tenetur neque, illo maxime esse unde doloremque fugiat quas!
-                </p>                 
+            <div class="subdivition">
+                <p>Games</p>
             </div>
         </div>
-
-    </main>
-
-    <footer>
-        <p> No dudes en unirte a VCPCode, todos podemos aprender juntos</p>
-    </footer>
 </body>
 </html>
